[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
authors = ["ecklf <ecklf@icloud.com>"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.7.0"
thiserror = "1.0.37"
